<?xml version="1.0"?>
<package>
  <name>turtlebot_ekf</name>
  <version>0.0.0</version>
  <description>The turtlebot_ekf package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="andrew.dahdouh@gmail.com">andrew</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>kobuki_gazebo_plugins</build_depend>
  <build_depend>robot_pose_ekf</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>turtlebot_bringup</build_depend>
  <build_depend>turtlebot_description</build_depend>
  <build_depend>turtlebot_navigation</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
  <run_depend>turtlebot_gazebo</run_depend>
  <run_depend>turtlebot_rviz_launchers</run_depend>
   
  <run_depend>xacro</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>